name:            serversession-backend-acid-state
version:         1.0
license:         MIT
license-file:    LICENSE
author:          Felipe Lessa <felipe.lessa@gmail.com>
maintainer:      Felipe Lessa <felipe.lessa@gmail.com>
synopsis:        Storage backend for serversession using acid-state.
category:        Web
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        https://github.com/yesodweb/serversession
description:     API docs and the README are available at <http://www.stackage.org/package/serversession-backend-acid-state>
extra-source-files: README.md

library
  hs-source-dirs: src
  build-depends:
      base                      == 4.*
    , acid-state                == 0.12.*
    , containers
    , mtl
    , safecopy                  == 0.8.*
    , unordered-containers

    , serversession             == 1.0.*
  exposed-modules:
    Web.ServerSession.Backend.Acid
    Web.ServerSession.Backend.Acid.Internal
  extensions:
    ConstraintKinds
    DeriveDataTypeable
    FlexibleContexts
    TemplateHaskell
    TypeFamilies
    UndecidableInstances
  ghc-options:     -Wall


test-suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs:  tests
  build-depends:
      base, acid-state, containers, mtl, safecopy, unordered-containers

    , hspec                     >= 2.1 && < 3

    , serversession
    , serversession-backend-acid-state
  main-is:         Main.hs
  ghc-options:     -Wall -threaded "-with-rtsopts=-N -s -M1G -c" -rtsopts


source-repository head
  type:     git
  location: https://github.com/yesodweb/serversession
