cabal-version:   >= 1.10
name:            serversession-backend-acid-state
version:         1.0.5
license:         MIT
license-file:    LICENSE
author:          Felipe Lessa <felipe.lessa@gmail.com>
maintainer:      Michael Xavier <michael@michaelxavier.net>, ncaq <ncaq@ncaq.net>
synopsis:        Storage backend for serversession using acid-state.
category:        Web
stability:       Stable
build-type:      Simple
homepage:        https://github.com/yesodweb/serversession
description:     API docs and the README are available at <http://www.stackage.org/package/serversession-backend-acid-state>
extra-source-files: README.md
                    changelog.md

flag lib-Werror
  default: False
  manual: True

library
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:
      base                      == 4.*
    , acid-state                >= 0.16
    , containers
    , mtl
    , safecopy                  >= 0.8
    , unordered-containers

    , serversession             == 1.0.*
  exposed-modules:
    Web.ServerSession.Backend.Acid
    Web.ServerSession.Backend.Acid.Internal
  default-extensions:
    ConstraintKinds
    DeriveDataTypeable
    FlexibleContexts
    TemplateHaskell
    TypeFamilies
    UndecidableInstances
  ghc-options:     -Wall
  if flag(lib-Werror)
    ghc-options: -Werror
  if impl(ghc >= 8.0.0)
    ghc-options: -Wno-redundant-constraints


test-suite tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs:  tests
  build-depends:
      base, acid-state, containers, mtl, safecopy, unordered-containers

    , hspec                     >= 2.1 && < 3

    , serversession
    , serversession-backend-acid-state
  main-is:         Main.hs
  default-extensions:
    CPP
  ghc-options:     -Wall -threaded "-with-rtsopts=-N -s -M1G -c" -rtsopts
  if flag(lib-Werror)
    ghc-options: -Werror


source-repository head
  type:     git
  location: https://github.com/yesodweb/serversession
