name:            serversession-backend-persistent
version:         1.0
license:         MIT
license-file:    LICENSE
author:          Felipe Lessa <felipe.lessa@gmail.com>
maintainer:      Felipe Lessa <felipe.lessa@gmail.com>
synopsis:        Storage backend for serversession using persistent and an RDBMS.
category:        Web
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        https://github.com/yesodweb/serversession
description:     API docs and the README are available at <http://www.stackage.org/package/serversession-backend-persistent>
extra-source-files: README.md

library
  hs-source-dirs: src
  build-depends:
      base                      == 4.*
    , aeson
    , base64-bytestring         == 1.0.*
    , bytestring
    , containers
    , path-pieces
    , persistent                == 2.1.*
    , persistent-template       == 2.1.*
    , text
    , time

    , serversession             == 1.0.*
  exposed-modules:
    Web.ServerSession.Backend.Persistent
    Web.ServerSession.Backend.Persistent.Internal.Impl
    Web.ServerSession.Backend.Persistent.Internal.Types
  extensions:
    DeriveDataTypeable
    EmptyDataDecls
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    TemplateHaskell
    TypeFamilies
  ghc-options:     -Wall


test-suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs:  tests
  build-depends:

      base, aeson, base64-bytestring, bytestring, containers,
      path-pieces, persistent, persistent-template, text, time

    , hspec                     >= 2.1 && < 3
    , monad-logger
    , persistent-sqlite         == 2.1.*
    , persistent-postgresql     == 2.1.*
    , resource-pool
    , QuickCheck

    , serversession
    , serversession-backend-persistent
  extensions:
    OverloadedStrings
    TemplateHaskell
  main-is:         Main.hs
  ghc-options:     -Wall -threaded -with-rtsopts=-N


source-repository head
  type:     git
  location: https://github.com/yesodweb/serversession
