cabal-version:   >= 1.10
name:            serversession-backend-persistent
version:         2.0.1
license:         MIT
license-file:    LICENSE
author:          Felipe Lessa <felipe.lessa@gmail.com>
maintainer:      Michael Xavier <michael@michaelxavier.net>, ncaq <ncaq@ncaq.net>
synopsis:        Storage backend for serversession using persistent and an RDBMS.
category:        Web
stability:       Stable
build-type:      Simple
homepage:        https://github.com/yesodweb/serversession
description:     API docs and the README are available at <http://www.stackage.org/package/serversession-backend-persistent>
extra-source-files: README.md
                    changelog.md

flag lib-Werror
  default: False
  manual: True

library
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:
      base                      == 4.*
    , aeson
    , base64-bytestring         == 1.2.*
    , bytestring
    , cereal                    >= 0.4
    , path-pieces
    , persistent                == 2.13.*
    , tagged                    >= 0.7
    , text
    , time
    , transformers
    , unordered-containers

    , serversession             == 1.0.*
  exposed-modules:
    Web.ServerSession.Backend.Persistent
    Web.ServerSession.Backend.Persistent.Internal.Impl
    Web.ServerSession.Backend.Persistent.Internal.Types
  default-extensions:
    DeriveDataTypeable
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    OverloadedStrings
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TypeFamilies
    UndecidableInstances
  ghc-options:     -Wall
  if flag(lib-Werror)
    ghc-options: -Werror



test-suite tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs:  tests
  build-depends:

      base, aeson, base64-bytestring, bytestring, cereal,
      path-pieces, persistent, persistent-template, text, time,
      transformers, unordered-containers

    , hspec                     >= 2.1 && < 3
    , monad-logger
    , persistent-sqlite         >= 2.1
    , persistent-postgresql     >= 2.1
    , resource-pool
    , QuickCheck

    , serversession
    , serversession-backend-persistent
  default-extensions:
    OverloadedStrings
    TemplateHaskell
  main-is:         Main.hs
  ghc-options:     -Wall -threaded "-with-rtsopts=-N -s -M2G -c" -rtsopts
  if flag(lib-Werror)
    ghc-options: -Werror



source-repository head
  type:     git
  location: https://github.com/yesodweb/serversession
