cabal-version:   >= 1.10
name:            serversession-backend-redis
version:         1.0.5
license:         MIT
license-file:    LICENSE
author:          Felipe Lessa <felipe.lessa@gmail.com>
maintainer:      Michael Xavier <michael@michaelxavier.net>
synopsis:        Storage backend for serversession using Redis.
category:        Web
stability:       Stable
build-type:      Simple
homepage:        https://github.com/yesodweb/serversession
description:     API docs and the README are available at <http://www.stackage.org/package/serversession-backend-redis>
extra-source-files: README.md
                    changelog.md

flag old-locale
  description: Use time-1.4 and old-locale (GHC 7.8).
  default:     False

flag lib-Werror
  default: False
  manual: True

library
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:
      base                      == 4.*
    , bytestring
    , hedis                     == 0.15.*
    , path-pieces
    , tagged                    >= 0.7
    , text
    , time                      >= 1.4
    , transformers
    , unordered-containers

    , serversession             == 1.0.*
  if flag(old-locale)
    build-depends: time == 1.4.*, old-locale
  else
    build-depends: time >= 1.5
  exposed-modules:
    Web.ServerSession.Backend.Redis
    Web.ServerSession.Backend.Redis.Internal
  default-extensions:
    CPP
    DeriveDataTypeable
    FlexibleContexts
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeFamilies
  ghc-options:     -Wall
  if flag(lib-Werror)
    ghc-options: -Werror
  if impl(ghc >= 8.0.0)
    ghc-options: -Wno-redundant-constraints



test-suite tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs:  tests
  build-depends:
      base, bytestring, hedis, path-pieces, text,
      time, transformers, unordered-containers

    , hspec                     >= 2.1 && < 3

    , serversession
    , serversession-backend-redis
  main-is:         Main.hs
  ghc-options:     -Wall -threaded "-with-rtsopts=-N -s -M1G -c" -rtsopts
  if flag(lib-Werror)
    ghc-options: -Werror



source-repository head
  type:     git
  location: https://github.com/yesodweb/serversession
