cabal-version:   >= 1.10
name:            serversession-frontend-wai
version:         1.0.1
license:         MIT
license-file:    LICENSE
author:          Felipe Lessa <felipe.lessa@gmail.com>
maintainer:      Michael Xavier <michael@michaelxavier.net>
synopsis:        wai-session bindings for serversession.
category:        Web
stability:       Stable
build-type:      Simple
homepage:        https://github.com/yesodweb/serversession
description:     API docs and the README are available at <http://www.stackage.org/package/serversession-frontend-wai>
extra-source-files: README.md
                    changelog.md

flag lib-Werror
  default: False
  manual: True

library
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:
      base                      >= 4.6   && < 5
    , bytestring
    , cookie                    >= 0.4
    , data-default
    , path-pieces
    , text
    , time
    , transformers
    , unordered-containers
    , vault
    , wai
    , wai-session               == 0.3.*

    , serversession             == 1.0.*
  exposed-modules:
    Web.ServerSession.Frontend.Wai
    Web.ServerSession.Frontend.Wai.Internal
  default-extensions:
    FlexibleContexts
    OverloadedStrings
    TypeFamilies
  ghc-options:     -Wall
  if flag(lib-Werror)
    ghc-options: -Werror
  if impl(ghc >= 8.0.0)
    ghc-options: -Wno-redundant-constraints

source-repository head
  type:     git
  location: https://github.com/yesodweb/serversession
