name:            serversession
version:         1.0
license:         MIT
license-file:    LICENSE
author:          Felipe Lessa <felipe.lessa@gmail.com>
maintainer:      Felipe Lessa <felipe.lessa@gmail.com>
synopsis:        Secure, modular server-side sessions.
category:        Web
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        https://github.com/yesodweb/serversession
description:     API docs and the README are available at <http://www.stackage.org/package/serversession>
extra-source-files: README.md

library
  hs-source-dirs: src
  build-depends:
      base                      == 4.*
    , aeson
    , base64-bytestring         == 1.0.*
    , bytestring
    , containers
    , cookie                    >= 0.4
    , data-default
    , nonce                     == 1.0.*
    , path-pieces
    , persistent                == 2.1.*
    , persistent-template       == 2.1.*
    , resource-pool
    , text
    , time
    , transformers
    , wai
    , yesod-core                == 1.4.*
  exposed-modules:
    Yesod.Persist.Session
    Yesod.Persist.Session.Internal.Backend
    Yesod.Persist.Session.Internal.Sql
    Yesod.Persist.Session.Internal.Types
  extensions:
    DeriveDataTypeable
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell
    TypeFamilies
  ghc-options:     -Wall

source-repository head
  type:     git
  location: https://github.com/yesodweb/serversession
