name:            serversession
version:         1.0
license:         MIT
license-file:    LICENSE
author:          Felipe Lessa <felipe.lessa@gmail.com>
maintainer:      Felipe Lessa <felipe.lessa@gmail.com>
synopsis:        Secure, modular server-side sessions.
category:        Web
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        https://github.com/yesodweb/serversession
description:     API docs and the README are available at <http://www.stackage.org/package/serversession>
extra-source-files: README.md

library
  hs-source-dirs: src
  build-depends:
      base                      == 4.*
    , aeson
    , base64-bytestring         == 1.0.*
    , bytestring
    , data-default
    , hashable
    , nonce                     == 1.0.*
    , path-pieces
    , text
    , time
    , transformers
    , unordered-containers
  exposed-modules:
    Web.ServerSession.Core
    Web.ServerSession.Core.Internal
    Web.ServerSession.Core.StorageTests
  extensions:
    DeriveDataTypeable
    FlexibleContexts
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies
    UndecidableInstances
  ghc-options:     -Wall


test-suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs:  tests
  build-depends:
      base, aeson, base64-bytestring, bytestring, data-default,
      nonce, path-pieces, text, time, transformers,
      unordered-containers

    , containers
    , hspec                     >= 2.1 && < 3
    , QuickCheck
    , serversession
  extensions:
    DeriveDataTypeable
    FlexibleContexts
    OverloadedStrings
    StandaloneDeriving
    TupleSections
    TypeFamilies
    UndecidableInstances
  main-is:         Main.hs
  ghc-options:     -Wall -threaded "-with-rtsopts=-N -s -M1G -c" -rtsopts


source-repository head
  type:     git
  location: https://github.com/yesodweb/serversession
