cabal-version:   >= 1.10
name:            serversession
version:         1.0.3
license:         MIT
license-file:    LICENSE
author:          Felipe Lessa <felipe.lessa@gmail.com>
maintainer:      Michael Xavier <michael@michaelxavier.net>
synopsis:        Secure, modular server-side sessions.
category:        Web
stability:       Stable
build-type:      Simple
homepage:        https://github.com/yesodweb/serversession
description:     API docs and the README are available at <http://www.stackage.org/package/serversession>
extra-source-files: README.md
                    changelog.md

flag lib-Werror
  default: False
  manual: True

library
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:
      base                      == 4.*
    , aeson
    , base64-bytestring         >= 1.0 && < 1.3
    , bytestring
    , data-default
    , hashable
    , nonce                     == 1.0.*
    , path-pieces
    , persistent-test
    , text
    , time
    , transformers
    , unordered-containers
  exposed-modules:
    Web.ServerSession.Core
    Web.ServerSession.Core.Internal
    Web.ServerSession.Core.StorageTests
  default-extensions:
    DeriveDataTypeable
    FlexibleContexts
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies
    UndecidableInstances
  ghc-options:     -Wall
  if flag(lib-Werror)
    ghc-options: -Werror



test-suite tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs:  tests
  build-depends:
      base, aeson, base64-bytestring, bytestring, data-default,
      nonce, path-pieces, text, time, transformers,
      unordered-containers

    , containers
    , hspec                     >= 2.1 && < 3
    , QuickCheck
    , serversession
  default-extensions:
    DeriveDataTypeable
    FlexibleContexts
    OverloadedStrings
    StandaloneDeriving
    TupleSections
    TypeFamilies
    UndecidableInstances
  main-is:         Main.hs
  ghc-options:     -Wall -threaded "-with-rtsopts=-N -s -M1G -c" -rtsopts
  if flag(lib-Werror)
    ghc-options: -Werror



source-repository head
  type:     git
  location: https://github.com/yesodweb/serversession
